tests/paczka1/small_fuzzy/62943402.err
Error in line 2: S0 S812 0,5
Error in line 8: S0 S812 0,9
Error in line 9: pW6X2q S812 97,5
Error in line 15: ?S0
